Fixing compilation issue